<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/ma_margin"
    android:orientation="vertical"
    tools:context="com.example.pk.shop.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_welcome_to_shop"
                android:layout_gravity="center"
                android:id="@+id/ma_welcome_to_shop"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_shop_state"
                android:layout_gravity="center"
                android:id="@+id/ma_shop_state"
                android:textSize="30sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ma_product_list">

    </ListView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/ma_open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ma_open"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/ma_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ma_close"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/ma_begin_sale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ma_begin_sale"
                    android:layout_weight="1" />

            </LinearLayout>

            <TextView
                android:text="@string/ma_queue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ma_queue" />
        </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>
